--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <title>杨靖武</title>
 <meta name="title" content="杨靖武" />
 <meta name="description" content="杨靖武" />
-<meta name="keywords" content="it技术,世界旅行,区块链,操作教程,比特币,比特币微科幻,生活点滴," />
+<meta name="keywords" content="it技术,世界旅行,区块链,操作教程,比特币,生活点滴," />
 
 
 <meta property="og:title" content="" />
@@ -240,8 +240,8 @@
   <main>
 <p><strong>😃  有朋自远方来，不亦乐乎</strong></p>
 <hr>
-<p>💖 这里会记录一些个人经验心得，日常琐碎，以及一些有趣的事情。</p>
-<p>希望通过写文章的方式，让我进行更加<strong>专业和深入</strong>的思考。</p>
+<p>💖 欢迎你的到来，我叫<strong>杨靖武</strong>，英文名 <strong>Reardon</strong>. 这里会记录一些日常琐碎，经验心得，以及一些有趣的事情。</p>
+<p>希望通过写文章的方式，让我进行更加<strong>细致和深入</strong>的思考。</p>
 <p><strong>你还可以在这些地方找到我:</strong></p>
 <ul>
 <li><a href="https://twitter.com/ReardonYang">Twitter</a></li>
@@ -249,14 +249,14 @@
 <li><a href="https://www.douban.com/people/57644512/">豆瓣</a></li>
 </ul>
 <p>如果你有<strong>任何问题</strong>想要交流，请<strong>通过 <a href="https://twitter.com/ReardonYang">Twitter</a> 或者 <a href="https://www.douban.com/people/57644512/">豆瓣</a> 联系我！</strong></p>
-<p><img src="/images/self.jpg" alt="self"></p>
+<h4 id="我还建设了一个科普比特币知识的网站比特币幸存者手册httpsbitcoinororg">我还建设了一个科普<strong>比特币</strong>知识的网站🕸️：<a href="https://bitcoinor.org/">比特币幸存者手册</a></h4>
 <p>如果喜欢我的文字，欢迎给我打赏：</p>
 <ul>
 <li>BTC：<code>321sCmLJoqDCARmngJqhPiomBbs2BBxuXy</code></li>
 <li>DOGE：<code>DAsdYRZXtDZBstn4Qu3EkRnJr9g3EwRemv</code></li>
 </ul>
 <hr>
-<p><code>“永和九年，歲在癸醜，暮春之初，會於會稽山陰之蘭亭，修禊事也。”</code></p>
+<p><code>万籁俱寂，大雪漫天，朵朵雪花几乎垂直地坠落地面，给人行道和大街铺上一层厚厚的白垫子。一个行人也没有，一点声音也听不到。街灯冷冷清清、徒劳无益地闪烁着。我飞奔了两百来步，在十字路口停住了脚步。—————费奥多尔·米哈伊洛维奇·陀思妥耶夫斯基”</code></p>
 
 
   </main>
