--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 <p><strong>😃  有朋自远方来，不亦乐乎</strong></p>
 <hr>
 <p>💖 欢迎你的到来，我叫<strong>杨靖武</strong>，英文名 <strong>Reardon</strong>. 这里会记录一些日常琐碎，经验心得，以及一些有趣的事情。</p>
-<p>希望通过写文章的方式，让我进行更加<strong>细致和深入</strong>的思考。</p>
+<p>我希望通过写文章的方式，进行更加<strong>细致和深入</strong>的思考。</p>
 <p><strong>你还可以在这些地方找到我:</strong></p>
 <ul>
 <li><a href="https://twitter.com/ReardonYang">Twitter</a></li>
