--- a/闲话比特币014比特币除了工人阶级和最广大人民群众的利益没有自己特殊的利益/index.html
+++ b/闲话比特币014比特币除了工人阶级和最广大人民群众的利益没有自己特殊的利益/index.html
@@ -10,7 +10,7 @@
 <meta name="title" content="闲话比特币014：比特币除了工人阶级和最广大人民群众的利益，没有自己特殊的利益" />
 <meta name="description" content="  买入并持有比特币，是这个世界最美好的事，如果价格下跌，你可以购买更多廉价的比特币；如果价格上涨，你可以持续从央行的腐败中获利，实现躺赢。
   萨尔瓦多，一个中美洲仅有650万人口的小国，在去年9月成了全世界第一个将比特币定为法定货币的国家。 如今，这个接受比特币的最早主权国，正给饱受金融霸权的这片土地上的人民带来无尽的希望，最好的结果，可能是帮助该国实现弯道超车，从“第三世界”流氓小国一跃成为头号强国。
-  不做多比特币，就失去了生活的乐趣，手中无比特币而活着，就好似行走在午夜的行尸。
+  不买比特币，就失去了生活的乐趣，手中无比特币而活着，就好似行走在午夜的行尸。
   不要为已经完成的下跌而懊恼，向前看。过年在家，给自己分配一个任务，向你的亲朋好友科普比特币知识，传播中本聪思想。让更多的人加入这场去中心化社会实验。
   不要将他们称作韭菜，换个说法&ndash;&gt;觉醒者。
   不要将这种行为称作接盘，换个说法&ndash;&gt;储蓄。
@@ -27,7 +27,7 @@
 <meta property="og:title" content="闲话比特币014：比特币除了工人阶级和最广大人民群众的利益，没有自己特殊的利益" />
 <meta property="og:description" content="  买入并持有比特币，是这个世界最美好的事，如果价格下跌，你可以购买更多廉价的比特币；如果价格上涨，你可以持续从央行的腐败中获利，实现躺赢。
   萨尔瓦多，一个中美洲仅有650万人口的小国，在去年9月成了全世界第一个将比特币定为法定货币的国家。 如今，这个接受比特币的最早主权国，正给饱受金融霸权的这片土地上的人民带来无尽的希望，最好的结果，可能是帮助该国实现弯道超车，从“第三世界”流氓小国一跃成为头号强国。
-  不做多比特币，就失去了生活的乐趣，手中无比特币而活着，就好似行走在午夜的行尸。
+  不买比特币，就失去了生活的乐趣，手中无比特币而活着，就好似行走在午夜的行尸。
   不要为已经完成的下跌而懊恼，向前看。过年在家，给自己分配一个任务，向你的亲朋好友科普比特币知识，传播中本聪思想。让更多的人加入这场去中心化社会实验。
   不要将他们称作韭菜，换个说法&ndash;&gt;觉醒者。
   不要将这种行为称作接盘，换个说法&ndash;&gt;储蓄。
@@ -52,7 +52,7 @@
 <meta name="twitter:title" content="闲话比特币014：比特币除了工人阶级和最广大人民群众的利益，没有自己特殊的利益"/>
 <meta name="twitter:description" content="  买入并持有比特币，是这个世界最美好的事，如果价格下跌，你可以购买更多廉价的比特币；如果价格上涨，你可以持续从央行的腐败中获利，实现躺赢。
   萨尔瓦多，一个中美洲仅有650万人口的小国，在去年9月成了全世界第一个将比特币定为法定货币的国家。 如今，这个接受比特币的最早主权国，正给饱受金融霸权的这片土地上的人民带来无尽的希望，最好的结果，可能是帮助该国实现弯道超车，从“第三世界”流氓小国一跃成为头号强国。
-  不做多比特币，就失去了生活的乐趣，手中无比特币而活着，就好似行走在午夜的行尸。
+  不买比特币，就失去了生活的乐趣，手中无比特币而活着，就好似行走在午夜的行尸。
   不要为已经完成的下跌而懊恼，向前看。过年在家，给自己分配一个任务，向你的亲朋好友科普比特币知识，传播中本聪思想。让更多的人加入这场去中心化社会实验。
   不要将他们称作韭菜，换个说法&ndash;&gt;觉醒者。
   不要将这种行为称作接盘，换个说法&ndash;&gt;储蓄。
@@ -69,7 +69,7 @@
 <meta itemprop="name" content="闲话比特币014：比特币除了工人阶级和最广大人民群众的利益，没有自己特殊的利益">
 <meta itemprop="description" content="  买入并持有比特币，是这个世界最美好的事，如果价格下跌，你可以购买更多廉价的比特币；如果价格上涨，你可以持续从央行的腐败中获利，实现躺赢。
   萨尔瓦多，一个中美洲仅有650万人口的小国，在去年9月成了全世界第一个将比特币定为法定货币的国家。 如今，这个接受比特币的最早主权国，正给饱受金融霸权的这片土地上的人民带来无尽的希望，最好的结果，可能是帮助该国实现弯道超车，从“第三世界”流氓小国一跃成为头号强国。
-  不做多比特币，就失去了生活的乐趣，手中无比特币而活着，就好似行走在午夜的行尸。
+  不买比特币，就失去了生活的乐趣，手中无比特币而活着，就好似行走在午夜的行尸。
   不要为已经完成的下跌而懊恼，向前看。过年在家，给自己分配一个任务，向你的亲朋好友科普比特币知识，传播中本聪思想。让更多的人加入这场去中心化社会实验。
   不要将他们称作韭菜，换个说法&ndash;&gt;觉醒者。
   不要将这种行为称作接盘，换个说法&ndash;&gt;储蓄。
@@ -300,7 +300,8 @@
 </p>
 
 <content>
-  <ul>
+  <p><img src="/images/bitcoin-odyssey/bitcoin014.jpeg" alt="bitcoin014"></p>
+<ul>
 <li>
 <p>买入并持有比特币，是这个世界最美好的事，如果价格下跌，你可以购买更多廉价的比特币；如果价格上涨，你可以持续从央行的腐败中获利，实现躺赢。</p>
 </li>
@@ -309,7 +310,7 @@
 如今，这个接受比特币的最早主权国，正给饱受金融霸权的这片土地上的人民带来无尽的希望，最好的结果，可能是帮助该国实现弯道超车，从“第三世界”流氓小国一跃成为头号强国。</p>
 </li>
 <li>
-<p>不做多比特币，就失去了生活的乐趣，手中无比特币而活着，就好似行走在午夜的行尸。</p>
+<p>不买比特币，就失去了生活的乐趣，手中无比特币而活着，就好似行走在午夜的行尸。</p>
 </li>
 <li>
 <p>不要为已经完成的下跌而懊恼，向前看。过年在家，给自己分配一个任务，向你的亲朋好友科普比特币知识，传播中本聪思想。让更多的人加入这场去中心化社会实验。</p>
