--- a/闲话比特币015用馒头和榨菜来改善生活用比特币来储蓄/index.html
+++ b/闲话比特币015用馒头和榨菜来改善生活用比特币来储蓄/index.html
@@ -11,7 +11,7 @@
 <meta name="description" content="  作为一个trader，如果你过分关于宏观，可能会影响你的判断。而你如果是一个hodler，过分关注短期波动，同样也会影响你的判断。
   hodler不会等待最佳位置，hodler会持续买入。hodler只有“买入”这一个动作，所以hodler的建议不适合trader。
   比特币没有熔断机制，任何值都有可能。
-  个人看法：如果你看好比特币，空仓是一种耻辱，空仓代表你和比特币失联了。
+  如果你看好比特币，空仓是一种耻辱，空仓代表你和比特币失联了。
   对于一个极端的品种，必须要用相匹配的，极端的方法来应对。来不了和风细雨。革命不是请客吃饭。
   用馒头和榨菜来改善生活，用比特币来储蓄。
   要敢于被套，这是一种美德。
@@ -27,7 +27,7 @@
 <meta property="og:description" content="  作为一个trader，如果你过分关于宏观，可能会影响你的判断。而你如果是一个hodler，过分关注短期波动，同样也会影响你的判断。
   hodler不会等待最佳位置，hodler会持续买入。hodler只有“买入”这一个动作，所以hodler的建议不适合trader。
   比特币没有熔断机制，任何值都有可能。
-  个人看法：如果你看好比特币，空仓是一种耻辱，空仓代表你和比特币失联了。
+  如果你看好比特币，空仓是一种耻辱，空仓代表你和比特币失联了。
   对于一个极端的品种，必须要用相匹配的，极端的方法来应对。来不了和风细雨。革命不是请客吃饭。
   用馒头和榨菜来改善生活，用比特币来储蓄。
   要敢于被套，这是一种美德。
@@ -51,7 +51,7 @@
 <meta name="twitter:description" content="  作为一个trader，如果你过分关于宏观，可能会影响你的判断。而你如果是一个hodler，过分关注短期波动，同样也会影响你的判断。
   hodler不会等待最佳位置，hodler会持续买入。hodler只有“买入”这一个动作，所以hodler的建议不适合trader。
   比特币没有熔断机制，任何值都有可能。
-  个人看法：如果你看好比特币，空仓是一种耻辱，空仓代表你和比特币失联了。
+  如果你看好比特币，空仓是一种耻辱，空仓代表你和比特币失联了。
   对于一个极端的品种，必须要用相匹配的，极端的方法来应对。来不了和风细雨。革命不是请客吃饭。
   用馒头和榨菜来改善生活，用比特币来储蓄。
   要敢于被套，这是一种美德。
@@ -67,7 +67,7 @@
 <meta itemprop="description" content="  作为一个trader，如果你过分关于宏观，可能会影响你的判断。而你如果是一个hodler，过分关注短期波动，同样也会影响你的判断。
   hodler不会等待最佳位置，hodler会持续买入。hodler只有“买入”这一个动作，所以hodler的建议不适合trader。
   比特币没有熔断机制，任何值都有可能。
-  个人看法：如果你看好比特币，空仓是一种耻辱，空仓代表你和比特币失联了。
+  如果你看好比特币，空仓是一种耻辱，空仓代表你和比特币失联了。
   对于一个极端的品种，必须要用相匹配的，极端的方法来应对。来不了和风细雨。革命不是请客吃饭。
   用馒头和榨菜来改善生活，用比特币来储蓄。
   要敢于被套，这是一种美德。
@@ -308,7 +308,7 @@
 <p>比特币没有熔断机制，任何值都有可能。</p>
 </li>
 <li>
-<p>个人看法：如果你看好比特币，空仓是一种耻辱，空仓代表你和比特币失联了。</p>
+<p>如果你看好比特币，空仓是一种耻辱，空仓代表你和比特币失联了。</p>
 </li>
 <li>
 <p>对于一个极端的品种，必须要用相匹配的，极端的方法来应对。来不了和风细雨。革命不是请客吃饭。</p>
