--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
   <main>
 <p><strong>😃  有朋自远方来，不亦乐乎</strong></p>
 <hr>
-<p>💖 欢迎你的到来，我是<strong>Reardon</strong>. 这里会记录一些日常琐碎，经验心得，以及一些有趣的事情。</p>
+<p>💖 欢迎你的到来，我是<strong>杨靖武，英文名Reardon</strong>. 这里会记录一些日常琐碎，经验心得，以及一些有趣的事情。</p>
 <p>我希望通过写文章的方式，进行更加<strong>细致和深入</strong>的思考。</p>
 <p><strong>你还可以在这些地方找到我:</strong></p>
 <ul>
@@ -249,7 +249,6 @@
 <li><a href="https://www.douban.com/people/57644512/">豆瓣</a></li>
 </ul>
 <p>如果你有<strong>任何问题</strong>想要交流，请<strong>通过 <a href="https://twitter.com/ReardonYang">Twitter</a> 或者 <a href="https://www.douban.com/people/57644512/">豆瓣</a> 联系我！</strong></p>
-<h4 id="我还建设了一个科普比特币知识的网站比特币幸存者手册httpsbitcoinororg">我还建设了一个科普<strong>比特币</strong>知识的网站🕸️：<a href="https://bitcoinor.org/">比特币幸存者手册</a></h4>
 <p>如果喜欢我的文字，欢迎给我打赏：</p>
 <ul>
 <li>BTC：<code>321sCmLJoqDCARmngJqhPiomBbs2BBxuXy</code></li>
