--- a/记食/index.html
+++ b/记食/index.html
@@ -8,7 +8,7 @@
 <link rel="shortcut icon" href="https://reardonyang.com/images/favicon.png" />
 <title>记食 | 杨靖武</title>
 <meta name="title" content="记食" />
-<meta name="description" content=" 如果蜻蜓点水，就只能是生活的消费者，用力且认真的生活，才能是一个输出者。  😋
+<meta name="description" content=" 如果蜻蜓点水，就只能是生活的消费者，用力且认真的生活，就有机会成为一个输出者。  😋
 ——2021年04月23日 杨靖武30岁生日，乔乔买了蛋糕，煮了长寿面，还有好吃的菜 😋😋
 ——2021年05月01日 😋😋
 ——2021年05月31日 😋😋
@@ -40,7 +40,7 @@
 
 
 <meta property="og:title" content="记食" />
-<meta property="og:description" content=" 如果蜻蜓点水，就只能是生活的消费者，用力且认真的生活，才能是一个输出者。  😋
+<meta property="og:description" content=" 如果蜻蜓点水，就只能是生活的消费者，用力且认真的生活，就有机会成为一个输出者。  😋
 ——2021年04月23日 杨靖武30岁生日，乔乔买了蛋糕，煮了长寿面，还有好吃的菜 😋😋
 ——2021年05月01日 😋😋
 ——2021年05月31日 😋😋
@@ -80,7 +80,7 @@
 <meta name="twitter:image" content="https://reardonyang.com/images/share.jpg"/>
 
 <meta name="twitter:title" content="记食"/>
-<meta name="twitter:description" content=" 如果蜻蜓点水，就只能是生活的消费者，用力且认真的生活，才能是一个输出者。  😋
+<meta name="twitter:description" content=" 如果蜻蜓点水，就只能是生活的消费者，用力且认真的生活，就有机会成为一个输出者。  😋
 ——2021年04月23日 杨靖武30岁生日，乔乔买了蛋糕，煮了长寿面，还有好吃的菜 😋😋
 ——2021年05月01日 😋😋
 ——2021年05月31日 😋😋
@@ -112,7 +112,7 @@
 
 
 <meta itemprop="name" content="记食">
-<meta itemprop="description" content=" 如果蜻蜓点水，就只能是生活的消费者，用力且认真的生活，才能是一个输出者。  😋
+<meta itemprop="description" content=" 如果蜻蜓点水，就只能是生活的消费者，用力且认真的生活，就有机会成为一个输出者。  😋
 ——2021年04月23日 杨靖武30岁生日，乔乔买了蛋糕，煮了长寿面，还有好吃的菜 😋😋
 ——2021年05月01日 😋😋
 ——2021年05月31日 😋😋
@@ -361,7 +361,7 @@
 
 <content>
   <blockquote>
-<h3 id="如果蜻蜓点水就只能是生活的消费者用力且认真的生活才能是一个输出者">如果蜻蜓点水，就只能是生活的消费者，用力且认真的生活，才能是一个输出者。</h3>
+<h3 id="如果蜻蜓点水就只能是生活的消费者用力且认真的生活就有机会成为一个输出者">如果蜻蜓点水，就只能是生活的消费者，用力且认真的生活，就有机会成为一个输出者。</h3>
 </blockquote>
 <p><img src="/images/foodiary/live-harder.jpeg" alt="foodiary"></p>
 <p>😋</p>
