--- a/index.html
+++ b/index.html
@@ -244,11 +244,11 @@
 <p>我希望通过写文章的方式，进行更加<strong>细致和深入</strong>的思考。</p>
 <p><strong>你还可以在这些地方找到我:</strong></p>
 <ul>
+<li><a href="https://www.douban.com/people/57644512/">豆瓣</a></li>
 <li><a href="https://twitter.com/ReardonYang">Twitter</a></li>
 <li><a href="https://github.com/ReardonYang">Github</a></li>
-<li><a href="https://www.douban.com/people/57644512/">豆瓣</a></li>
 </ul>
-<p>如果你有<strong>任何问题</strong>想要交流，请<strong>通过 <a href="https://twitter.com/ReardonYang">Twitter</a> 或者 <a href="https://www.douban.com/people/57644512/">豆瓣</a> 联系我！</strong></p>
+<p>如果你有<strong>任何问题</strong>想要交流，请<strong>通过<a href="https://www.douban.com/people/57644512/">豆瓣</a> 或者 <a href="https://twitter.com/ReardonYang">Twitter</a> 联系我！</strong></p>
 <p>如果喜欢我的文字，欢迎给我打赏：</p>
 <ul>
 <li>BTC：<code>321sCmLJoqDCARmngJqhPiomBbs2BBxuXy</code></li>
