--- a/夜晚/index.html
+++ b/夜晚/index.html
@@ -8,7 +8,7 @@
 <link rel="shortcut icon" href="https://reardonyang.com/images/favicon.png" />
 <title>夜晚 | 杨靖武</title>
 <meta name="title" content="夜晚" />
-<meta name="description" content=" 夜凉吹笛千山月，路暗迷人百种花。棋罢不知人换世，酒阑无奈客思家。  夜晚总是能让我显得更加真实，更加逼近自己的本质，更加像个人。
+<meta name="description" content=" 夜凉吹笛千山月，路暗迷人百种花。棋罢不知人换世，酒阑无奈客思家。  夜晚总能让我更加真实，更加逼近自己的本质。
 身边所有人、事都静止的时候，意念也开始静止下来。
 最好能有老式钟表的嘀嗒声，那将是多么奢侈。在漫长的城市生活中，我已经能将空调机滴水，水龙头滴水，甚至是冰箱制冷的轰鸣，癔想成这永恒的嘀嗒~嘀嗒~嘀嗒。
 你睡着了，我醒着。
@@ -27,7 +27,7 @@
 
 
 <meta property="og:title" content="夜晚" />
-<meta property="og:description" content=" 夜凉吹笛千山月，路暗迷人百种花。棋罢不知人换世，酒阑无奈客思家。  夜晚总是能让我显得更加真实，更加逼近自己的本质，更加像个人。
+<meta property="og:description" content=" 夜凉吹笛千山月，路暗迷人百种花。棋罢不知人换世，酒阑无奈客思家。  夜晚总能让我更加真实，更加逼近自己的本质。
 身边所有人、事都静止的时候，意念也开始静止下来。
 最好能有老式钟表的嘀嗒声，那将是多么奢侈。在漫长的城市生活中，我已经能将空调机滴水，水龙头滴水，甚至是冰箱制冷的轰鸣，癔想成这永恒的嘀嗒~嘀嗒~嘀嗒。
 你睡着了，我醒着。
@@ -54,7 +54,7 @@
 <meta name="twitter:image" content="https://reardonyang.com/images/share.jpg"/>
 
 <meta name="twitter:title" content="夜晚"/>
-<meta name="twitter:description" content=" 夜凉吹笛千山月，路暗迷人百种花。棋罢不知人换世，酒阑无奈客思家。  夜晚总是能让我显得更加真实，更加逼近自己的本质，更加像个人。
+<meta name="twitter:description" content=" 夜凉吹笛千山月，路暗迷人百种花。棋罢不知人换世，酒阑无奈客思家。  夜晚总能让我更加真实，更加逼近自己的本质。
 身边所有人、事都静止的时候，意念也开始静止下来。
 最好能有老式钟表的嘀嗒声，那将是多么奢侈。在漫长的城市生活中，我已经能将空调机滴水，水龙头滴水，甚至是冰箱制冷的轰鸣，癔想成这永恒的嘀嗒~嘀嗒~嘀嗒。
 你睡着了，我醒着。
@@ -73,7 +73,7 @@
 
 
 <meta itemprop="name" content="夜晚">
-<meta itemprop="description" content=" 夜凉吹笛千山月，路暗迷人百种花。棋罢不知人换世，酒阑无奈客思家。  夜晚总是能让我显得更加真实，更加逼近自己的本质，更加像个人。
+<meta itemprop="description" content=" 夜凉吹笛千山月，路暗迷人百种花。棋罢不知人换世，酒阑无奈客思家。  夜晚总能让我更加真实，更加逼近自己的本质。
 身边所有人、事都静止的时候，意念也开始静止下来。
 最好能有老式钟表的嘀嗒声，那将是多么奢侈。在漫长的城市生活中，我已经能将空调机滴水，水龙头滴水，甚至是冰箱制冷的轰鸣，癔想成这永恒的嘀嗒~嘀嗒~嘀嗒。
 你睡着了，我醒着。
@@ -312,7 +312,7 @@
 <h3 id="夜凉吹笛千山月路暗迷人百种花棋罢不知人换世酒阑无奈客思家">夜凉吹笛千山月，路暗迷人百种花。棋罢不知人换世，酒阑无奈客思家。</h3>
 </blockquote>
 <p><img src="/images/night/night.jpeg" alt="night"></p>
-<p>夜晚总是能让我显得更加真实，更加逼近自己的本质，更加像个人。</p>
+<p>夜晚总能让我更加真实，更加逼近自己的本质。</p>
 <p>身边所有人、事都静止的时候，意念也开始静止下来。</p>
 <p>最好能有老式钟表的嘀嗒声，那将是多么奢侈。在漫长的城市生活中，我已经能将空调机滴水，水龙头滴水，甚至是冰箱制冷的轰鸣，癔想成这永恒的嘀嗒~嘀嗒~嘀嗒。</p>
 <p>你睡着了，我醒着。</p>
