--- a/404.html
+++ b/404.html
@@ -8,14 +8,14 @@
 <link rel="shortcut icon" href="https://reardonyang.com/images/favicon.png" />
 <title>404</title>
 <meta name="title" content="404 Page not found" />
-<meta name="description" content="杨靖武" />
-<meta name="keywords" content="it技术,世界旅行,区块链,操作教程,比特币,生活点滴,精华转载," />
+<meta name="description" content="Reardon" />
+<meta name="keywords" content="世界旅行,操作教程,比特币,生活点滴,精华转载," />
 
 
 <meta property="og:title" content="404 Page not found" />
-<meta property="og:description" content="杨靖武" />
+<meta property="og:description" content="Reardon" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://reardonyang.com/404.html" /><meta property="og:image" content="https://reardonyang.com/images/share.jpg"/><meta property="og:site_name" content="杨靖武" />
+<meta property="og:url" content="https://reardonyang.com/404.html" /><meta property="og:image" content="https://reardonyang.com/images/share.jpg"/><meta property="og:site_name" content="Reardon" />
 
 
 
@@ -23,12 +23,12 @@
 <meta name="twitter:image" content="https://reardonyang.com/images/share.jpg"/>
 
 <meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content="杨靖武"/>
+<meta name="twitter:description" content="Reardon"/>
 
 
 
 <meta itemprop="name" content="404 Page not found">
-<meta itemprop="description" content="杨靖武">
+<meta itemprop="description" content="Reardon">
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
   <style>
@@ -208,7 +208,7 @@
 
 <body>
   <header><a href="/" class="title">
-  <h2>杨靖武</h2>
+  <h2>Reardon</h2>
 </a>
 <nav><a href="/">首页</a>
 
@@ -239,7 +239,7 @@
 <h2>ʕノ•ᴥ•ʔノ ︵ ┻━┻</h2>
 
   </main>
-  <footer>Powered By <a href="https://reardonyang.com/">💖ReardonYang</a>
+  <footer>Powered By <a href="https://github.com/ReardonYang/">💖Reardon</a>
 </footer>
 
     
