--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="shortcut icon" href="https://reardonyang.com/images/favicon.png" />
-<title>杨靖武</title>
-<meta name="title" content="杨靖武" />
-<meta name="description" content="杨靖武" />
-<meta name="keywords" content="it技术,世界旅行,区块链,操作教程,比特币,生活点滴,精华转载," />
+<title>Reardon</title>
+<meta name="title" content="Reardon" />
+<meta name="description" content="Reardon" />
+<meta name="keywords" content="世界旅行,操作教程,比特币,生活点滴,精华转载," />
 
 
 <meta property="og:title" content="" />
-<meta property="og:description" content="杨靖武" />
+<meta property="og:description" content="Reardon" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://reardonyang.com/" /><meta property="og:image" content="https://reardonyang.com/images/share.jpg"/><meta property="og:site_name" content="杨靖武" />
+<meta property="og:url" content="https://reardonyang.com/" /><meta property="og:image" content="https://reardonyang.com/images/share.jpg"/><meta property="og:site_name" content="Reardon" />
 
 
 
@@ -24,15 +24,15 @@
 <meta name="twitter:image" content="https://reardonyang.com/images/share.jpg"/>
 
 <meta name="twitter:title" content=""/>
-<meta name="twitter:description" content="杨靖武"/>
+<meta name="twitter:description" content="Reardon"/>
 
 
 
 <meta itemprop="name" content="">
-<meta itemprop="description" content="杨靖武">
+<meta itemprop="description" content="Reardon">
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
-  <link rel="alternate" type="application/rss+xml" href="https://reardonyang.com/index.xml" title="杨靖武" />
+  <link rel="alternate" type="application/rss+xml" href="https://reardonyang.com/index.xml" title="Reardon" />
   <style>
   body {
     font-family: Verdana, sans-serif;
@@ -210,7 +210,7 @@
 
 <body>
   <header><a href="/" class="title">
-  <h2>杨靖武</h2>
+  <h2>Reardon</h2>
 </a>
 <nav><a href="/">首页</a>
 
@@ -237,28 +237,27 @@
   gtag('config', 'G-NSSE83FXH4');
 </script></header>
   <main>
-<p><strong>😃  有朋自远方来，不亦乐乎</strong></p>
+<p><strong>😎  有朋自远方来，不亦乐乎</strong></p>
 <hr>
-<p>💖 欢迎你的到来，我是<strong>杨靖武，英文名Reardon</strong>. 这里会记录一些日常琐碎，经验心得，以及一些有趣的事情。</p>
-<p>我希望通过写文章的方式，进行更加<strong>细致和深入</strong>的思考。</p>
+<p><img src="/images/reardon.jpg" alt="reardon"></p>
+<p>💖 我是<strong>Reardon</strong>，这里会记录一些日常琐碎，经验心得，以及一些有趣的事情。我希望通过写文章的方式，进行更加<strong>细致和深入</strong>的思考。</p>
 <p><strong>你还可以在这些地方找到我:</strong></p>
 <ul>
 <li><a href="https://www.douban.com/people/57644512/">豆瓣</a></li>
 <li><a href="https://twitter.com/ReardonYang">Twitter</a></li>
 <li><a href="https://github.com/ReardonYang">Github</a></li>
 </ul>
-<p>如果你有<strong>任何问题</strong>想要交流，请<strong>通过<a href="https://www.douban.com/people/57644512/">豆瓣</a> 或者 <a href="https://twitter.com/ReardonYang">Twitter</a> 联系我！</strong></p>
-<p>如果喜欢我的文字，欢迎给我打赏：</p>
+<p>🪙 如果喜欢我的文字，欢迎打赏：</p>
 <ul>
-<li>BTC：<code>321sCmLJoqDCARmngJqhPiomBbs2BBxuXy</code></li>
-<li>DOGE：<code>DAsdYRZXtDZBstn4Qu3EkRnJr9g3EwRemv</code></li>
+<li>bitcoin：<code>321sCmLJoqDCARmngJqhPiomBbs2BBxuXy</code></li>
+<li>dogecoin：<code>DAsdYRZXtDZBstn4Qu3EkRnJr9g3EwRemv</code></li>
 </ul>
 <hr>
-<p><code>万籁俱寂，大雪漫天，朵朵雪花几乎垂直地坠落地面，给人行道和大街铺上一层厚厚的白垫子。一个行人也没有，一点声音也听不到。街灯冷冷清清、徒劳无益地闪烁着。我飞奔了两百来步，在十字路口停住了脚步。—————费奥多尔·米哈伊洛维奇·陀思妥耶夫斯基”</code></p>
+<p><code>万籁俱寂，大雪漫天，朵朵雪花几乎垂直地坠落地面，给人行道和大街铺上一层厚厚的白垫子。一个行人也没有，一点声音也听不到。街灯冷冷清清、徒劳无益地闪烁着。我飞奔了两百来步，在十字路口停住了脚步。——费奥多尔·米哈伊洛维奇·陀思妥耶夫斯基”</code></p>
 
 
   </main>
-  <footer>Powered By <a href="https://reardonyang.com/">💖ReardonYang</a>
+  <footer>Powered By <a href="https://github.com/ReardonYang/">💖Reardon</a>
 </footer>
 
     
