--- a/plan/index.html
+++ b/plan/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="shortcut icon" href="https://reardonyang.com/images/favicon.png" />
-<title>计划 | 杨靖武</title>
+<title>计划 | Reardon</title>
 <meta name="title" content="计划" />
 <meta name="description" content="⏰ 内容更新计划
 -&gt;近期将要完成的内容 🚀
@@ -25,7 +25,7 @@
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://reardonyang.com/plan/" /><meta property="og:image" content="https://reardonyang.com/images/share.jpg"/><meta property="article:section" content="" />
 
-<meta property="og:site_name" content="杨靖武" />
+<meta property="og:site_name" content="Reardon" />
 
 
 
@@ -229,7 +229,7 @@
 
 <body>
   <header><a href="/" class="title">
-  <h2>杨靖武</h2>
+  <h2>Reardon</h2>
 </a>
 <nav><a href="/">首页</a>
 
@@ -289,7 +289,7 @@
 </p>
 
   </main>
-  <footer>Powered By <a href="https://reardonyang.com/">💖ReardonYang</a>
+  <footer>Powered By <a href="https://github.com/ReardonYang/">💖Reardon</a>
 </footer>
 
     
