--- a/copyright/index.html
+++ b/copyright/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="shortcut icon" href="https://reardonyang.com/images/favicon.png" />
-<title>版权 | 杨靖武</title>
+<title>版权 | Reardon</title>
 <meta name="title" content="版权" />
 <meta name="description" content="📘 版权声明
 本站所有内容在Creative Commons署名-非商业性使用-相同方式共享3.0协议下发表。
@@ -23,7 +23,7 @@
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://reardonyang.com/copyright/" /><meta property="og:image" content="https://reardonyang.com/images/share.jpg"/><meta property="article:section" content="" />
 
-<meta property="og:site_name" content="杨靖武" />
+<meta property="og:site_name" content="Reardon" />
 
 
 
@@ -225,7 +225,7 @@
 
 <body>
   <header><a href="/" class="title">
-  <h2>杨靖武</h2>
+  <h2>Reardon</h2>
 </a>
 <nav><a href="/">首页</a>
 
@@ -286,7 +286,7 @@
 </p>
 
   </main>
-  <footer>Powered By <a href="https://reardonyang.com/">💖ReardonYang</a>
+  <footer>Powered By <a href="https://github.com/ReardonYang/">💖Reardon</a>
 </footer>
 
     
