--- a/tool/index.html
+++ b/tool/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="shortcut icon" href="https://reardonyang.com/images/favicon.png" />
-<title>工具 | 杨靖武</title>
+<title>工具 | Reardon</title>
 <meta name="title" content="工具" />
 <meta name="description" content="🎸 工欲善其事必先利其器
 -&gt;日常使用工具
@@ -21,7 +21,7 @@
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://reardonyang.com/tool/" /><meta property="og:image" content="https://reardonyang.com/images/share.jpg"/><meta property="article:section" content="" />
 
-<meta property="og:site_name" content="杨靖武" />
+<meta property="og:site_name" content="Reardon" />
 
 
 
@@ -221,7 +221,7 @@
 
 <body>
   <header><a href="/" class="title">
-  <h2>杨靖武</h2>
+  <h2>Reardon</h2>
 </a>
 <nav><a href="/">首页</a>
 
@@ -271,7 +271,7 @@
 </p>
 
   </main>
-  <footer>Powered By <a href="https://reardonyang.com/">💖ReardonYang</a>
+  <footer>Powered By <a href="https://github.com/ReardonYang/">💖Reardon</a>
 </footer>
 
     
