--- a/tool/index.html
+++ b/tool/index.html
@@ -9,6 +9,7 @@
 <title>工具 | Reardon</title>
 <meta name="title" content="工具" />
 <meta name="description" content="🎸 工欲善其事必先利其器
+工具和武器之间的区别常常非常微妙。
 -&gt;日常使用工具
 比特币 Bitcoin：非主权货币 MyGPT：个人AI助理 Vercel：网站托管服务 Git：版本管理工具 Syncthing：P2P同步工具 ExpressVPN：科学上网工具 中本聪研究所：传播中本聪思想 Infinite Market Cap：全球资产排名工具 Ledger：安全的加密货币/资产硬件钱包 “古劍有沈盧、魚腸之名，沈音湛。沈盧謂其湛湛然黑色也。古人以劑鋼為刃，柔鐵不莖榦；不爾則多斷折。劍之鋼者，刃多毀缺，巨闕是也。故不可純用劑鋼。魚腸即今蟠鋼劍也，又謂之松文。取諸魚燔熟，褫去脅，視見其腸，正如今之蟠鋼劍文也。”" />
 <meta name="keywords" content="" />
@@ -16,6 +17,7 @@
 
 <meta property="og:title" content="工具" />
 <meta property="og:description" content="🎸 工欲善其事必先利其器
+工具和武器之间的区别常常非常微妙。
 -&gt;日常使用工具
 比特币 Bitcoin：非主权货币 MyGPT：个人AI助理 Vercel：网站托管服务 Git：版本管理工具 Syncthing：P2P同步工具 ExpressVPN：科学上网工具 中本聪研究所：传播中本聪思想 Infinite Market Cap：全球资产排名工具 Ledger：安全的加密货币/资产硬件钱包 “古劍有沈盧、魚腸之名，沈音湛。沈盧謂其湛湛然黑色也。古人以劑鋼為刃，柔鐵不莖榦；不爾則多斷折。劍之鋼者，刃多毀缺，巨闕是也。故不可純用劑鋼。魚腸即今蟠鋼劍也，又謂之松文。取諸魚燔熟，褫去脅，視見其腸，正如今之蟠鋼劍文也。”" />
 <meta property="og:type" content="article" />
@@ -30,6 +32,7 @@
 
 <meta name="twitter:title" content="工具"/>
 <meta name="twitter:description" content="🎸 工欲善其事必先利其器
+工具和武器之间的区别常常非常微妙。
 -&gt;日常使用工具
 比特币 Bitcoin：非主权货币 MyGPT：个人AI助理 Vercel：网站托管服务 Git：版本管理工具 Syncthing：P2P同步工具 ExpressVPN：科学上网工具 中本聪研究所：传播中本聪思想 Infinite Market Cap：全球资产排名工具 Ledger：安全的加密货币/资产硬件钱包 “古劍有沈盧、魚腸之名，沈音湛。沈盧謂其湛湛然黑色也。古人以劑鋼為刃，柔鐵不莖榦；不爾則多斷折。劍之鋼者，刃多毀缺，巨闕是也。故不可純用劑鋼。魚腸即今蟠鋼劍也，又謂之松文。取諸魚燔熟，褫去脅，視見其腸，正如今之蟠鋼劍文也。”"/>
 
@@ -37,10 +40,11 @@
 
 <meta itemprop="name" content="工具">
 <meta itemprop="description" content="🎸 工欲善其事必先利其器
+工具和武器之间的区别常常非常微妙。
 -&gt;日常使用工具
 比特币 Bitcoin：非主权货币 MyGPT：个人AI助理 Vercel：网站托管服务 Git：版本管理工具 Syncthing：P2P同步工具 ExpressVPN：科学上网工具 中本聪研究所：传播中本聪思想 Infinite Market Cap：全球资产排名工具 Ledger：安全的加密货币/资产硬件钱包 “古劍有沈盧、魚腸之名，沈音湛。沈盧謂其湛湛然黑色也。古人以劑鋼為刃，柔鐵不莖榦；不爾則多斷折。劍之鋼者，刃多毀缺，巨闕是也。故不可純用劑鋼。魚腸即今蟠鋼劍也，又謂之松文。取諸魚燔熟，褫去脅，視見其腸，正如今之蟠鋼劍文也。”">
 
-<meta itemprop="wordCount" content="16"><meta itemprop="image" content="https://reardonyang.com/images/share.jpg"/>
+<meta itemprop="wordCount" content="17"><meta itemprop="image" content="https://reardonyang.com/images/share.jpg"/>
 <meta itemprop="keywords" content="" />
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
@@ -251,6 +255,7 @@
 
 <content>
   <p><strong>🎸 工欲善其事必先利其器</strong></p>
+<p><code>工具和武器之间的区别常常非常微妙。</code></p>
 <hr>
 <p>-&gt;<strong>日常使用工具</strong></p>
 <ul>
