--- a/plan/index.html
+++ b/plan/index.html
@@ -9,6 +9,7 @@
 <title>计划 | Reardon</title>
 <meta name="title" content="计划" />
 <meta name="description" content="⏰ 内容更新计划
+生命的意义不在于我们的存在，而在于我们的贡献。
 -&gt;近期将要完成的内容 🚀
 比特币闪电网络介绍 科学上网工具介绍 伊隆·马斯克关于比特币\加密货币\狗狗币的观点汇总 -&gt;持续更新的内容 🔥
 闲话比特币 比特币微科幻 中本聪文集（电子邮件、论坛帖子、代码、白皮书） -&gt;远期可能会加入的内容 😴
@@ -18,6 +19,7 @@
 
 <meta property="og:title" content="计划" />
 <meta property="og:description" content="⏰ 内容更新计划
+生命的意义不在于我们的存在，而在于我们的贡献。
 -&gt;近期将要完成的内容 🚀
 比特币闪电网络介绍 科学上网工具介绍 伊隆·马斯克关于比特币\加密货币\狗狗币的观点汇总 -&gt;持续更新的内容 🔥
 闲话比特币 比特币微科幻 中本聪文集（电子邮件、论坛帖子、代码、白皮书） -&gt;远期可能会加入的内容 😴
@@ -34,6 +36,7 @@
 
 <meta name="twitter:title" content="计划"/>
 <meta name="twitter:description" content="⏰ 内容更新计划
+生命的意义不在于我们的存在，而在于我们的贡献。
 -&gt;近期将要完成的内容 🚀
 比特币闪电网络介绍 科学上网工具介绍 伊隆·马斯克关于比特币\加密货币\狗狗币的观点汇总 -&gt;持续更新的内容 🔥
 闲话比特币 比特币微科幻 中本聪文集（电子邮件、论坛帖子、代码、白皮书） -&gt;远期可能会加入的内容 😴
@@ -43,12 +46,13 @@
 
 <meta itemprop="name" content="计划">
 <meta itemprop="description" content="⏰ 内容更新计划
+生命的意义不在于我们的存在，而在于我们的贡献。
 -&gt;近期将要完成的内容 🚀
 比特币闪电网络介绍 科学上网工具介绍 伊隆·马斯克关于比特币\加密货币\狗狗币的观点汇总 -&gt;持续更新的内容 🔥
 闲话比特币 比特币微科幻 中本聪文集（电子邮件、论坛帖子、代码、白皮书） -&gt;远期可能会加入的内容 😴
 上海印象 MetaMask介绍 影响我的作家 接触比特币的那一年，我在做什么 “禮由人起。人生有欲，欲而不得則不能無忿，忿而無度量則爭，爭則亂。先王惡其亂，故制禮義以養人之欲，給人之求，使欲不窮於物，物不屈於欲，二者相待而長，是禮之所起也。故禮者養也。稻粱五味，所以養口也；椒蘭芬茝，所以養鼻也；鐘鼓管弦，所以養耳也；刻鏤文章，所以養目也；疏房床笫几席，所以養體也：故禮者養也。”">
 
-<meta itemprop="wordCount" content="19"><meta itemprop="image" content="https://reardonyang.com/images/share.jpg"/>
+<meta itemprop="wordCount" content="20"><meta itemprop="image" content="https://reardonyang.com/images/share.jpg"/>
 <meta itemprop="keywords" content="" />
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
@@ -259,6 +263,7 @@
 
 <content>
   <p><strong>⏰ 内容更新计划</strong></p>
+<p><code>生命的意义不在于我们的存在，而在于我们的贡献。</code></p>
 <hr>
 <p>-&gt;<strong>近期将要完成的内容</strong> 🚀</p>
 <ul>
