--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 <li><a href="https://twitter.com/ReardonYang">Twitter</a></li>
 <li><a href="https://github.com/ReardonYang">Github</a></li>
 </ul>
-<p>🪙 如果喜欢我的文字，欢迎打赏：</p>
+<p>🔥 如果喜欢我的文字，欢迎打赏：</p>
 <ul>
 <li>bitcoin：<code>321sCmLJoqDCARmngJqhPiomBbs2BBxuXy</code></li>
 <li>dogecoin：<code>DAsdYRZXtDZBstn4Qu3EkRnJr9g3EwRemv</code></li>
