--- a/原点一/index.html
+++ b/原点一/index.html
@@ -11,8 +11,8 @@
 <meta name="description" content="我曾经自诩为宿命掌控者，能蛊惑时空，构筑出最终的未来，我认为日子不会在短暂的欢愉中消逝，而未来亦将与当下大相径庭，曼妙而遥不可及。—— 里尔登·梅
 生活中，我们总在寻找自己的原点，寻找生命的意义。我记得小时候，在那些炎热的夏天里，我总会去河边捉虾、玩水，感受烈日下的沁人心脾；我记得看过的每一本书，都有诱人的故事和闪亮的夏日，它们有着令人不可捉摸的深刻内涵；我记得春天晨光下，在田垄间，河道旁，一汪一汪，绿油油的水；我记得被老师责骂后，长辈的怜爱，同伴的议论。这些点点滴滴的往事，让我逐渐找到自己的生活方式，也让我成为了现在的自己。
 我想回忆，到底是哪些人，哪些事，塑造成了今天的我，这个狡黠、残忍、贪财好色、穷凶极恶的我，我的原点在哪里，我的根基，我人生发展的基础。
-每个人的原点都不一样，有些人的原点可能是家庭、父母、朋友，有些人的原点可能是学校、工作、经历等等。通过回顾自己的过去，思考哪些事情、哪些人对我的影响大，这些都有可能成为原点。另外，小时候的梦想和想法，也有可能是原点所在。
-沉思良久，我发现我竟然毫无头绪，我从繁杂、破碎的旧日时光中挣扎出来，一无所获，却疲惫异常。我想起妻子的话，她前两天给我来信，说她被“困在这里”，这句话听起来颇为诗意，让我沉默许久，她指的是她独自抚养我们尚在襁褓的孩子，还要顾及地里的收成，被围困在这方寸的时空之间，过去辛劳。妻子一个人在我们的乡下小屋，一个静谧，微风阵阵的河边两层老房子。
+每个人的原点都不一样，有些人的原点可能是家庭、父母、朋友，有些人的原点可能是学校、工作、经历等等。这些都有可能成为原点。另外，小时候的梦想和想法，也有可能是原点所在。
+沉思良久，我发现我竟然毫无头绪，我从繁杂、破碎的旧日时光中挣扎出来，一无所获，却疲惫异常。我想起妻子的话，她前两天给我来信，说她被“困在这里”，这句话听起来颇为诗意，让我沉默许久，她指的是她独自抚养我们尚在襁褓的孩子，还要顾及地里的收成，被围困在这方寸的时空之间，过于辛劳。妻子一个人在我们的乡下小屋，一个静谧，微风阵阵的河边两层老房子。
 我意识到，我也被困在这里了，我所在的这里，燥热难当，空气浑浊。我一抬手，便发现，胳膊上又多了两个红色的突起，这里蚊虫实在太多，我当然是不惮于杀生的。往往是在失眠之后的天亮间，我会突然醒来，忘了有多少次，我醒来，总会发现手臂上有只纤弱的刺吸式口器的纤小飞虫，也不知道它在那里吮吸了多久，我都会毫不犹豫的猛力拍击下去。这真是一件可怜的事，蚊虫们，以及各种精致的小畜生，吸食许久，往往在我们人类覆手之间，即刻殒命。
 也许，我们自己的存在，也如这蚊虫在殒命前的瞬间吸食，我们的信念让我们相信，这是工作，朋友，房子，钱财，但我们谁又不是正在厮杀着的，命悬一线的战士。
 夏天，雷雨的时候，山林间小道上，蜈蚣都会爬出来，蜈蚣最喜欢闷热潮湿的环境，因为它们需要一定的湿度来保持身体的水分平衡，另外，下雨也使得它们原来的栖息地受到影响，无法继续生存。
@@ -27,8 +27,8 @@
 <meta property="og:description" content="我曾经自诩为宿命掌控者，能蛊惑时空，构筑出最终的未来，我认为日子不会在短暂的欢愉中消逝，而未来亦将与当下大相径庭，曼妙而遥不可及。—— 里尔登·梅
 生活中，我们总在寻找自己的原点，寻找生命的意义。我记得小时候，在那些炎热的夏天里，我总会去河边捉虾、玩水，感受烈日下的沁人心脾；我记得看过的每一本书，都有诱人的故事和闪亮的夏日，它们有着令人不可捉摸的深刻内涵；我记得春天晨光下，在田垄间，河道旁，一汪一汪，绿油油的水；我记得被老师责骂后，长辈的怜爱，同伴的议论。这些点点滴滴的往事，让我逐渐找到自己的生活方式，也让我成为了现在的自己。
 我想回忆，到底是哪些人，哪些事，塑造成了今天的我，这个狡黠、残忍、贪财好色、穷凶极恶的我，我的原点在哪里，我的根基，我人生发展的基础。
-每个人的原点都不一样，有些人的原点可能是家庭、父母、朋友，有些人的原点可能是学校、工作、经历等等。通过回顾自己的过去，思考哪些事情、哪些人对我的影响大，这些都有可能成为原点。另外，小时候的梦想和想法，也有可能是原点所在。
-沉思良久，我发现我竟然毫无头绪，我从繁杂、破碎的旧日时光中挣扎出来，一无所获，却疲惫异常。我想起妻子的话，她前两天给我来信，说她被“困在这里”，这句话听起来颇为诗意，让我沉默许久，她指的是她独自抚养我们尚在襁褓的孩子，还要顾及地里的收成，被围困在这方寸的时空之间，过去辛劳。妻子一个人在我们的乡下小屋，一个静谧，微风阵阵的河边两层老房子。
+每个人的原点都不一样，有些人的原点可能是家庭、父母、朋友，有些人的原点可能是学校、工作、经历等等。这些都有可能成为原点。另外，小时候的梦想和想法，也有可能是原点所在。
+沉思良久，我发现我竟然毫无头绪，我从繁杂、破碎的旧日时光中挣扎出来，一无所获，却疲惫异常。我想起妻子的话，她前两天给我来信，说她被“困在这里”，这句话听起来颇为诗意，让我沉默许久，她指的是她独自抚养我们尚在襁褓的孩子，还要顾及地里的收成，被围困在这方寸的时空之间，过于辛劳。妻子一个人在我们的乡下小屋，一个静谧，微风阵阵的河边两层老房子。
 我意识到，我也被困在这里了，我所在的这里，燥热难当，空气浑浊。我一抬手，便发现，胳膊上又多了两个红色的突起，这里蚊虫实在太多，我当然是不惮于杀生的。往往是在失眠之后的天亮间，我会突然醒来，忘了有多少次，我醒来，总会发现手臂上有只纤弱的刺吸式口器的纤小飞虫，也不知道它在那里吮吸了多久，我都会毫不犹豫的猛力拍击下去。这真是一件可怜的事，蚊虫们，以及各种精致的小畜生，吸食许久，往往在我们人类覆手之间，即刻殒命。
 也许，我们自己的存在，也如这蚊虫在殒命前的瞬间吸食，我们的信念让我们相信，这是工作，朋友，房子，钱财，但我们谁又不是正在厮杀着的，命悬一线的战士。
 夏天，雷雨的时候，山林间小道上，蜈蚣都会爬出来，蜈蚣最喜欢闷热潮湿的环境，因为它们需要一定的湿度来保持身体的水分平衡，另外，下雨也使得它们原来的栖息地受到影响，无法继续生存。
@@ -50,8 +50,8 @@
 <meta name="twitter:description" content="我曾经自诩为宿命掌控者，能蛊惑时空，构筑出最终的未来，我认为日子不会在短暂的欢愉中消逝，而未来亦将与当下大相径庭，曼妙而遥不可及。—— 里尔登·梅
 生活中，我们总在寻找自己的原点，寻找生命的意义。我记得小时候，在那些炎热的夏天里，我总会去河边捉虾、玩水，感受烈日下的沁人心脾；我记得看过的每一本书，都有诱人的故事和闪亮的夏日，它们有着令人不可捉摸的深刻内涵；我记得春天晨光下，在田垄间，河道旁，一汪一汪，绿油油的水；我记得被老师责骂后，长辈的怜爱，同伴的议论。这些点点滴滴的往事，让我逐渐找到自己的生活方式，也让我成为了现在的自己。
 我想回忆，到底是哪些人，哪些事，塑造成了今天的我，这个狡黠、残忍、贪财好色、穷凶极恶的我，我的原点在哪里，我的根基，我人生发展的基础。
-每个人的原点都不一样，有些人的原点可能是家庭、父母、朋友，有些人的原点可能是学校、工作、经历等等。通过回顾自己的过去，思考哪些事情、哪些人对我的影响大，这些都有可能成为原点。另外，小时候的梦想和想法，也有可能是原点所在。
-沉思良久，我发现我竟然毫无头绪，我从繁杂、破碎的旧日时光中挣扎出来，一无所获，却疲惫异常。我想起妻子的话，她前两天给我来信，说她被“困在这里”，这句话听起来颇为诗意，让我沉默许久，她指的是她独自抚养我们尚在襁褓的孩子，还要顾及地里的收成，被围困在这方寸的时空之间，过去辛劳。妻子一个人在我们的乡下小屋，一个静谧，微风阵阵的河边两层老房子。
+每个人的原点都不一样，有些人的原点可能是家庭、父母、朋友，有些人的原点可能是学校、工作、经历等等。这些都有可能成为原点。另外，小时候的梦想和想法，也有可能是原点所在。
+沉思良久，我发现我竟然毫无头绪，我从繁杂、破碎的旧日时光中挣扎出来，一无所获，却疲惫异常。我想起妻子的话，她前两天给我来信，说她被“困在这里”，这句话听起来颇为诗意，让我沉默许久，她指的是她独自抚养我们尚在襁褓的孩子，还要顾及地里的收成，被围困在这方寸的时空之间，过于辛劳。妻子一个人在我们的乡下小屋，一个静谧，微风阵阵的河边两层老房子。
 我意识到，我也被困在这里了，我所在的这里，燥热难当，空气浑浊。我一抬手，便发现，胳膊上又多了两个红色的突起，这里蚊虫实在太多，我当然是不惮于杀生的。往往是在失眠之后的天亮间，我会突然醒来，忘了有多少次，我醒来，总会发现手臂上有只纤弱的刺吸式口器的纤小飞虫，也不知道它在那里吮吸了多久，我都会毫不犹豫的猛力拍击下去。这真是一件可怜的事，蚊虫们，以及各种精致的小畜生，吸食许久，往往在我们人类覆手之间，即刻殒命。
 也许，我们自己的存在，也如这蚊虫在殒命前的瞬间吸食，我们的信念让我们相信，这是工作，朋友，房子，钱财，但我们谁又不是正在厮杀着的，命悬一线的战士。
 夏天，雷雨的时候，山林间小道上，蜈蚣都会爬出来，蜈蚣最喜欢闷热潮湿的环境，因为它们需要一定的湿度来保持身体的水分平衡，另外，下雨也使得它们原来的栖息地受到影响，无法继续生存。
@@ -66,8 +66,8 @@
 <meta itemprop="description" content="我曾经自诩为宿命掌控者，能蛊惑时空，构筑出最终的未来，我认为日子不会在短暂的欢愉中消逝，而未来亦将与当下大相径庭，曼妙而遥不可及。—— 里尔登·梅
 生活中，我们总在寻找自己的原点，寻找生命的意义。我记得小时候，在那些炎热的夏天里，我总会去河边捉虾、玩水，感受烈日下的沁人心脾；我记得看过的每一本书，都有诱人的故事和闪亮的夏日，它们有着令人不可捉摸的深刻内涵；我记得春天晨光下，在田垄间，河道旁，一汪一汪，绿油油的水；我记得被老师责骂后，长辈的怜爱，同伴的议论。这些点点滴滴的往事，让我逐渐找到自己的生活方式，也让我成为了现在的自己。
 我想回忆，到底是哪些人，哪些事，塑造成了今天的我，这个狡黠、残忍、贪财好色、穷凶极恶的我，我的原点在哪里，我的根基，我人生发展的基础。
-每个人的原点都不一样，有些人的原点可能是家庭、父母、朋友，有些人的原点可能是学校、工作、经历等等。通过回顾自己的过去，思考哪些事情、哪些人对我的影响大，这些都有可能成为原点。另外，小时候的梦想和想法，也有可能是原点所在。
-沉思良久，我发现我竟然毫无头绪，我从繁杂、破碎的旧日时光中挣扎出来，一无所获，却疲惫异常。我想起妻子的话，她前两天给我来信，说她被“困在这里”，这句话听起来颇为诗意，让我沉默许久，她指的是她独自抚养我们尚在襁褓的孩子，还要顾及地里的收成，被围困在这方寸的时空之间，过去辛劳。妻子一个人在我们的乡下小屋，一个静谧，微风阵阵的河边两层老房子。
+每个人的原点都不一样，有些人的原点可能是家庭、父母、朋友，有些人的原点可能是学校、工作、经历等等。这些都有可能成为原点。另外，小时候的梦想和想法，也有可能是原点所在。
+沉思良久，我发现我竟然毫无头绪，我从繁杂、破碎的旧日时光中挣扎出来，一无所获，却疲惫异常。我想起妻子的话，她前两天给我来信，说她被“困在这里”，这句话听起来颇为诗意，让我沉默许久，她指的是她独自抚养我们尚在襁褓的孩子，还要顾及地里的收成，被围困在这方寸的时空之间，过于辛劳。妻子一个人在我们的乡下小屋，一个静谧，微风阵阵的河边两层老房子。
 我意识到，我也被困在这里了，我所在的这里，燥热难当，空气浑浊。我一抬手，便发现，胳膊上又多了两个红色的突起，这里蚊虫实在太多，我当然是不惮于杀生的。往往是在失眠之后的天亮间，我会突然醒来，忘了有多少次，我醒来，总会发现手臂上有只纤弱的刺吸式口器的纤小飞虫，也不知道它在那里吮吸了多久，我都会毫不犹豫的猛力拍击下去。这真是一件可怜的事，蚊虫们，以及各种精致的小畜生，吸食许久，往往在我们人类覆手之间，即刻殒命。
 也许，我们自己的存在，也如这蚊虫在殒命前的瞬间吸食，我们的信念让我们相信，这是工作，朋友，房子，钱财，但我们谁又不是正在厮杀着的，命悬一线的战士。
 夏天，雷雨的时候，山林间小道上，蜈蚣都会爬出来，蜈蚣最喜欢闷热潮湿的环境，因为它们需要一定的湿度来保持身体的水分平衡，另外，下雨也使得它们原来的栖息地受到影响，无法继续生存。
@@ -304,8 +304,8 @@
 <p> </p>
 <p>    生活中，我们总在寻找自己的原点，寻找生命的意义。我记得小时候，在那些炎热的夏天里，我总会去河边捉虾、玩水，感受烈日下的沁人心脾；我记得看过的每一本书，都有诱人的故事和闪亮的夏日，它们有着令人不可捉摸的深刻内涵；我记得春天晨光下，在田垄间，河道旁，一汪一汪，绿油油的水；我记得被老师责骂后，长辈的怜爱，同伴的议论。这些点点滴滴的往事，让我逐渐找到自己的生活方式，也让我成为了现在的自己。</p>
 <p>    我想回忆，到底是哪些人，哪些事，塑造成了今天的我，这个狡黠、残忍、贪财好色、穷凶极恶的我，我的原点在哪里，我的根基，我人生发展的基础。</p>
-<p>    每个人的原点都不一样，有些人的原点可能是家庭、父母、朋友，有些人的原点可能是学校、工作、经历等等。通过回顾自己的过去，思考哪些事情、哪些人对我的影响大，这些都有可能成为原点。另外，小时候的梦想和想法，也有可能是原点所在。</p>
-<p>    沉思良久，我发现我竟然毫无头绪，我从繁杂、破碎的旧日时光中挣扎出来，一无所获，却疲惫异常。我想起妻子的话，她前两天给我来信，说她被“困在这里”，这句话听起来颇为诗意，让我沉默许久，她指的是她独自抚养我们尚在襁褓的孩子，还要顾及地里的收成，被围困在这方寸的时空之间，过去辛劳。妻子一个人在我们的乡下小屋，一个静谧，微风阵阵的河边两层老房子。</p>
+<p>    每个人的原点都不一样，有些人的原点可能是家庭、父母、朋友，有些人的原点可能是学校、工作、经历等等。这些都有可能成为原点。另外，小时候的梦想和想法，也有可能是原点所在。</p>
+<p>    沉思良久，我发现我竟然毫无头绪，我从繁杂、破碎的旧日时光中挣扎出来，一无所获，却疲惫异常。我想起妻子的话，她前两天给我来信，说她被“困在这里”，这句话听起来颇为诗意，让我沉默许久，她指的是她独自抚养我们尚在襁褓的孩子，还要顾及地里的收成，被围困在这方寸的时空之间，过于辛劳。妻子一个人在我们的乡下小屋，一个静谧，微风阵阵的河边两层老房子。</p>
 <p>    我意识到，我也被困在这里了，我所在的这里，燥热难当，空气浑浊。我一抬手，便发现，胳膊上又多了两个红色的突起，这里蚊虫实在太多，我当然是不惮于杀生的。往往是在失眠之后的天亮间，我会突然醒来，忘了有多少次，我醒来，总会发现手臂上有只纤弱的刺吸式口器的纤小飞虫，也不知道它在那里吮吸了多久，我都会毫不犹豫的猛力拍击下去。这真是一件可怜的事，蚊虫们，以及各种精致的小畜生，吸食许久，往往在我们人类覆手之间，即刻殒命。</p>
 <p>    也许，我们自己的存在，也如这蚊虫在殒命前的瞬间吸食，我们的信念让我们相信，这是工作，朋友，房子，钱财，但我们谁又不是正在厮杀着的，命悬一线的战士。</p>
 <p>    夏天，雷雨的时候，山林间小道上，蜈蚣都会爬出来，蜈蚣最喜欢闷热潮湿的环境，因为它们需要一定的湿度来保持身体的水分平衡，另外，下雨也使得它们原来的栖息地受到影响，无法继续生存。</p>
