--- a/原点四/index.html
+++ b/原点四/index.html
@@ -283,6 +283,7 @@
 <p>认识婉云的那一年，我四十岁，婉云十九岁。婉云喜欢画画，她总是简单几笔，便勾勒出人物或风景最重要的特征。那一年，我看着她，她看着纸，用五彩缤纷铺满整个寒冬。</p>
 <p>然后，地震就来了，漫天的灰尘，钢筋的吱呀声，巨大的墙壁断裂声，不绝于耳。我拉上婉云，穿过一堆堆被震倒的物件，脚下的地面仿佛成了海浪，随时可能将我们卷倒，到达门口后，我发现整个世界已经是一片废墟，树干被横中折断，墙壁扭曲变形，天地整个颠倒了过来。这时，从正前方飞过来一小截砖块，正打着我的前额，我顿时眼前一黑，蹲倒下去。</p>
 <p>婉云这时不知是从哪里来的力气，竟发了疯似的，开始拖着我往前挪，我们穿过早上还排得整整齐齐，现在乱成一片的菜市场，水果摊，杂货铺，最后摔倒在一片开阔的路面上，总算脱离了危险。</p>
+<p><img src="/images/origin/origin04.jpg" alt="origin04"></p>
 <p>越是追忆往昔，越是试图去捕捉过去岁月与此时此刻的内在联系，我越是有一种深刻的宿命感。</p>
 <p>婉云后来和我说，她的这种逃生欲望，是小时候落下的病根。七岁那一年，她和村里四个伙伴去河堤边玩耍，他们并不知道当天下午会开闸泄洪，悲剧就此发生，五个孩子被呼啸而来的河水一齐卷入洪流中，婉云较为幸运，离河岸最近，不会游泳的她，奋力扑腾，最终上了岸，谁也不知道婉云在那一晚，走了多远，跑了多久，哭了多久，呼救了多少次，喊开了多少户人家的门，她的四个伙伴再也没回来。</p>
 <p>每个人终其一身，都会被幼年时期的经历所笼罩。幼年时期对死亡的凝视，带给婉云对大自然万物的深情和温柔。婉云在她院子的樱桃树上挂着一个牌子，上面写着：“这是鸟的食物”。用来提醒路人和亲朋不要随意采摘。</p>
